working on shema and samples

--- a/source/website/wwwroot/explorer/index.html
+++ b/source/website/wwwroot/explorer/index.html
@@ -1,4 +1,4 @@
-﻿<html lang="en">
+<html lang="en">
 <head>
     <meta charset = "utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -1399,7 +1399,7 @@
 </div><script>renderCard('Input.ChoiceSetCard', {
   "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
   "type": "AdaptiveCard",
-  "version": "1.0",
+  "version": "0.5",
   "body": [
     {
       "type": "TextBlock",
@@ -2654,9 +2654,9 @@ to an arbitrary url.</p>
 </tr>
 <tr>
 <td><strong>card</strong></td>
-<td><a href="#AdaptiveCard">AdaptiveCard</a></td>
+<td><a href="#container">Container</a></td>
 <td>true</td>
-<td>inline AdaptiveCard  defining the card to be shown when this action is invoked. It is up to client to decide how to show this inline card.</td>
+<td>inline container  defining the card to be shown when this action is invoked. It is up to client to decide how to show this inline card.</td>
 </tr>
 </tbody>
 </table>
