--- a/source/html/visualizer/index.html
+++ b/source/html/visualizer/index.html
@@ -35,13 +35,13 @@
                 <div id="content" class="markupRender"></div>
             </div>
         </div>
-        <div class="uiHeader" style="display: flex;">
-			<div style="flex: 1 1 50%;">
-				<div style="width: 0px; height: 0px; overflow: hidden">
-					<input type="file" id="filePicker" />
-				</div>
-            	<div id="loadSample" class="button">Load sample from file...</div>
-			</div>
+        <div class="uiHeader w3-container w3-display-container w3-display-bottommiddle" style="width: 100%">
+            <div style="flex: 1 1 50%;">
+                <div style="width: 0px; height: 0px; overflow: hidden">
+                    <input type="file" id="filePicker">
+                </div>
+                <div id="loadSample" class="button">Load sample from file...</div>
+            </div>
         </div>
     </div>
 </body>
