remove public dir

--- a/source/nodejs/adaptivecards-site/public/samples/Restaurant.html
+++ b/source/nodejs/adaptivecards-site/public/samples/Restaurant.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   
-  <title>Restaurant | Adaptive Cards</title>
+  <title>Samples | Adaptive Cards</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
-<meta property="og:title" content="Restaurant">
+<meta property="og:title" content="Samples">
 <meta property="og:url" content="http://adaptivecards.io/samples/Restaurant.html">
 <meta property="og:site_name" content="Adaptive Cards">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Restaurant">
+<meta name="twitter:title" content="Samples">
   
   
   
@@ -179,7 +179,7 @@
   
   <div class="w3-main" style="margin-left: 260px">
 
-      <h1 class="w3-container">Restaurant</h1>
+      <h1 class="w3-container">Samples</h1>
       
 <div class="w3-cell-row">
     
