--- a/source/nodejs/adaptivecards/example.html
+++ b/source/nodejs/adaptivecards/example.html
@@ -154,6 +154,7 @@
 
     <script>
         var adaptiveCard = new AdaptiveCards.AdaptiveCard();
+        adaptiveCard.hostConfig = new AdaptiveCards.HostConfig();
         adaptiveCard.parse(json);
         var renderedCard = adaptiveCard.render();
 
