--- a/source/nodejs/adaptivecards/example.html
+++ b/source/nodejs/adaptivecards/example.html
@@ -7,7 +7,10 @@
 
     <script src="dist/adaptivecards.js"></script>
     <style type="text/css">
-        
+        #exampleDiv {
+            width: 300px;
+            border: solid 1px black;
+        }
     </style>
 
 </head>
