--- a/source/nodejs/adaptivecards/example.html
+++ b/source/nodejs/adaptivecards/example.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <title>Adaptive Cards - Basic Example</title>
 
-    <script src="dist/adaptivecards.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/markdown-it/dist/markdown-it.js"></script>
+    <script type="text/javascript" src="dist/adaptivecards.js"></script>
+
     <style type="text/css">
         #exampleDiv {
             width: 300px;
@@ -18,6 +20,16 @@
 <body>
 
     <h1>Adaptive Cards - Basic Example</h1>
+    
+    <p>
+        This example requires a build of the Adaptive Cards library. From the command line, enter "npm run build" which will put
+        the built files in the /dist folder. Then refresh this page.
+    </p>
+    
+    <code>
+        <pre>> npm install</pre>
+        <pre>> npm run build</pre>
+    </code>
 
     <div id="exampleDiv"></div>
 
@@ -51,17 +63,13 @@
         // adaptiveCard.parse(json);
         // var renderedCard = adaptiveCard.render();
 
-        var renderedCard = AdaptiveCards.renderCard(json);
+        var renderedCard = AdaptiveCards.render(json);
+        //  renderedCard.on("action", action => {});
 
         var exampleDiv = document.getElementById('exampleDiv');
         exampleDiv.appendChild(renderedCard);
 
     </script>
-
-    <p>
-        This example requires a build of the Adaptive Cards library. From the command line, enter "npm run build" which will put
-        the built files in the /dist folder. Then refresh this page.
-    </p>
 
 </body>
 
