builds and tests working

--- a/source/nodejs/adaptivecards-visualizer/dev.html
+++ b/source/nodejs/adaptivecards-visualizer/dev.html
@@ -6,6 +6,7 @@
     <title>Adaptive Card Visualizer</title>
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
+    <script type="text/javascript" src="https://unpkg.com/markdown-it/dist/markdown-it.js"></script>
     <script src="node_modules/adaptivecards/dist/adaptivecards.js"></script>
     <script src="dist/adaptivecards-visualizer.js"></script>
 </head>
