remove markdown-it dep, delete old containers and visualizer cleanup

--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -6,8 +6,11 @@
     <title>Adaptive Card Visualizer</title>
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
-    
-    <script src="dist/visualizer-with-renderer.js"></script>
+    <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.js"></script>
+
+    <script src="node_modules/adaptivecards/dist/adaptivecards.js"></script>
+
+    <script src="dist/adaptivecards-visualizer.js"></script>
 </head>
 <body>
     <div class="uiRoot">
