rename onAction, update visualizer containers

--- a/source/nodejs/adaptivecards/example.html
+++ b/source/nodejs/adaptivecards/example.html
@@ -25,12 +25,12 @@
 
     <h3>To run:</h3>
     <code>
-        <pre>> npm install</pre>
-        <pre>> npm run build</pre>
-        <pre>> npm start (or refresh this page)</pre>
+        <pre>$ npm install</pre>
+        <pre>$ npm run build</pre>
+        <pre>Refresh this page</pre>
     </code>
 
-    <h3>Card will render below</h3>
+    <h3>A card will render below</h3>
 
     <div id="exampleDiv"></div>
 
@@ -74,7 +74,7 @@
             },
 
             // the action handler is invoked when actions are pressed
-            onAction: function (action) { alert("Ow!"); },
+            onExecuteAction: function (action) { alert("Ow!"); },
 
             // For markdown support you need a third-party library
             // E.g., to use markdown-it include the script and add the following:
