--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -20,7 +20,7 @@
                 <div id="editConfig" class="button subdued" style="margin-left: 4px;">Configuration editor</div>
 			</div>
             <div style="flex: 1 1 50%;">
-                <span style="margin-right: 6px;">Select a container:</span>
+                <span style="margin-right: 6px;">Select a Host App:</span>
 				<select id="hostContainerPicker" class="select"></select>
 			</div>
         </div>
