--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -35,7 +35,7 @@
                 <div id="content" class="markupRender"></div>
             </div>
         </div>
-        <div class="uiHeader w3-container w3-display-container w3-display-bottommiddle" style="width: 100%">
+        <div class="uiHeader">
             <div style="flex: 1 1 50%;">
                 <div style="width: 0px; height: 0px; overflow: hidden">
                     <input type="file" id="filePicker">
