--- a/source/nodejs/adaptivecards/example.html
+++ b/source/nodejs/adaptivecards/example.html
@@ -14,11 +14,9 @@
             border: solid 1px black;
         }
     </style>
-
 </head>
 
 <body>
-
     <h1>Adaptive Cards Example</h1>
 
     <p>This example requires a build of the Adaptive Cards library.</p>
@@ -65,32 +63,36 @@
             ]
         };
 
-        // define your render options
-        var renderOptions = {
+        // Create an AdaptiveCard instance
+        var adaptiveCard = new AdaptiveCards.AdaptiveCard();
 
-            // a Host Config describes style and behavior of your card
-            hostConfig: {
-                "fontFamily": "Segoe UI, Helvetica Nue, sans-serif"
-            },
+        // Set its hostConfig property unless you want to use the default Host Config
+        // Host Config defines the style and behavior of a card
+        adaptiveCard.hostConfig = new AdaptiveCards.HostConfig(
+            {
+                fontFamily: "Segoe UI, Helvetica Nue, sans-serif"
+                // More host config options
+            }
+        )
 
-            // the action handler is invoked when actions are pressed
-            onExecuteAction: function (action) { alert("Ow!"); },
+        // Set the adaptive card's event handlers. onExecuteAction is invoked
+        // whenever an action is clicked in the card
+        adaptiveCard.onExecuteAction = function(action) { alert("Ow!"); }
 
-            // For markdown support you need a third-party library
-            // E.g., to use markdown-it include the script and add the following:
-            // <!-- <script type="text/javascript" src="https://unpkg.com/markdown-it/dist/markdown-it.js"></script> -->
-            //processMarkdown: function (text) { return markdownit().render(text); }
-        };
-        
+        // For markdown support you need a third-party library
+        // E.g., to use markdown-it, include in your HTML page:
+        //     <script type="text/javascript" src="https://unpkg.com/markdown-it/dist/markdown-it.js">< /script>
+        // And add this code to replace the default markdown handler:
+        //     AdaptiveCards.processMarkdown = function(text) { return markdownit().render(text); }
 
-        // render the card to HTML
-        var renderedCard = AdaptiveCards.renderCard(card, renderOptions);
+        // Parse the card payload
+        adaptiveCard.parse(card);
 
-        // show the user!
+        // Render the card to an HTML element:
+        var renderedCard = adaptiveCard.render();
+
+        // And finally insert it in the page:
         document.getElementById('exampleDiv').appendChild(renderedCard);
-
     </script>
-
 </body>
-
 </html>
