Load local copy of Adaptive schema for IntelliSense support

--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -8,43 +8,10 @@
     <link rel="stylesheet" href="css/app.css" type="text/css" />
 
     <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
-
     <script src="node_modules/adaptivecards/dist/adaptivecards.js"></script>
 
+    <script src="./src/editor-utils.js"></script>
     <script src="dist/adaptivecards-visualizer.js"></script>
-
-    <script>
-        function loadMonacoEditor(callback) {
-            require.config(
-                {
-                    paths: {
-                        'vs': './node_modules/monaco-editor/min/vs'
-                    }
-                }
-            );
-            require(
-                ['vs/editor/editor.main'],
-                function() {
-                    monacoEditor = monaco.editor.create(
-                        document.getElementById('editor'),
-                        {
-                            folding: true,
-                            language: 'json',
-                            minimap: {
-                                enabled: false
-                            }
-                        }
-                    );
-    
-                    window.addEventListener('resize', function () {
-                        monacoEditor.layout();
-                    });
-    
-                    callback();
-                }
-            );
-        }
-    </script>
 </head>
 <body>
     <div class="uiRoot">
@@ -60,8 +27,7 @@
         </div>
         <div class="cardEditor">
             <div class="leftPane">
-                <div id="editor" style="overflow: hidden;">
-
+                <div id="editor">
                 </div>
             </div>
             <div class="rightPane">
