--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -6,20 +6,21 @@
     <title>Adaptive Card Visualizer</title>
 
     <link rel="stylesheet" href="css/app.css" type="text/css" />
-    <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.js"></script>
 
+    <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
     <script src="node_modules/adaptivecards/dist/adaptivecards.js"></script>
 
+    <script src="./src/editor-utils.js"></script>
     <script src="dist/adaptivecards-visualizer.js"></script>
 </head>
 <body>
     <div class="uiRoot">
         <div class="uiHeader" style="display: flex;">
-			<div id="tabStrip" style="flex: 1 1 50%;">
+			<div id="tabStrip" style="flex: 1 1 55%;">
             	<div id="editCard" class="button">Card editor</div>
                 <div id="editConfig" class="button subdued" style="margin-left: 4px;">Configuration editor</div>
 			</div>
-            <div style="flex: 1 1 50%;">
+            <div style="flex: 1 1 45%; min-width: 350px;">
                 <span style="margin-right: 6px;">Select a Host App:</span>
 				<select id="hostContainerPicker" class="select"></select>
 			</div>
@@ -27,11 +28,10 @@
         <div class="cardEditor">
             <div class="leftPane">
                 <div id="editor">
-
                 </div>
             </div>
             <div class="rightPane">
-                <div id="errorContainer" class="errorContainer"></div>
+                <div id="errorContainer" class="errorContainer" hidden="true"></div>
                 <div id="content" class="markupRender"></div>
             </div>
         </div>
