timeline previewer looking good

--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -23,7 +23,9 @@
 			</div>
             <div style="flex: 1 1 45%; min-width: 350px;">
                 <span style="margin-right: 6px;">Select a Host App:</span>
-				<select id="hostContainerPicker" class="select"></select>
+                <select id="hostContainerPicker" class="select"></select>
+                <div class="button">Partner Status</div>
+                <div class="button">Learn More</div>
 			</div>
         </div>
         <div class="cardEditor">
