used min scripts, added app insights, fix container styles

--- a/source/nodejs/adaptivecards-visualizer/index.html
+++ b/source/nodejs/adaptivecards-visualizer/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/visualizer.css" type="text/css" />
     
+    <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
+    
     <script src="node_modules/adaptivecards/dist/adaptivecards.js"></script>
 
     <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
