--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
         <link rel="stylesheet" href="css/outlook.css" type="text/css" />
     </head>
-    <body>
+    <body style="margin: 0; box-sizing: border-box;">
         <div style="display: flex;">
-            <div style="flex: 1 0 450px">
-                <div id="designerHost" style="border: 1px solid #EEEEEE"></div>
+            <div style="flex: 1 0 450px; height: 100%; overflow: auto;">
+                <div id="designerHost" style="border: 1px solid #EEEEEE; margin: 10px;"></div>
                 <button id="deleteSelected">Delete selected</button>
             </div>
-            <div style="flex: 1 1 100%">
-                <div id="propertySheetHost" style="width: 100%; height: 450px; background-color:lime"></div>
+            <div style="flex: 1 1 100%; height: 100%; overflow: auto; margin: 10px;">
+                <div id="propertySheetHost" style="width: 100%; height: 450px; background-color:lime;"></div>
             </div>
         </div>
     </body>
