--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -13,8 +13,8 @@
                 <div id="designerHost" style="border: 1px solid #EEEEEE; margin: 10px;"></div>
                 <button id="deleteSelected">Delete selected</button>
             </div>
-            <div style="flex: 1 1 100%; height: 100%; overflow: auto; margin: 10px;">
-                <div id="propertySheetHost" style="width: 100%; height: 450px; background-color:lime;"></div>
+            <div style="flex: 1 1 100%; height: 100%; overflow: auto; margin: 10px; padding-right: 10px;">
+                <div id="propertySheetHost" style="width: 100%; height: 450px;"></div>
             </div>
         </div>
     </body>
